-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b56
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083008 | emb-9 | David Holmes | P3 | Resolved | Fixed | team |
HotSpot JDK9 source code contains several unused VM Options which can be removed or made obsolete. All options are defined in "hotspot/src/share/vm/runtime/globals.hpp" file.
Here a list of options with comments:
1) AdaptiveSizePausePolicy - product int flag, description: "Policy for changing generation size for pause goals"
Unused product GC flag. Can be made obsolete.
2) AdjustConcurrency - product boolean flag, description: "Call thr_setconcurrency at thread creation time to avoid LWP starvation on MP systems (for Solaris Only)"
Become unused as part ofJDK-8038473 "Remove support for old T1 libthread", Can be removed, because used for threading support on Solaris 8 which we have not supported for a long time.
3) ParallelGCRetainPLAB - diagnostic boolean flag, description: "Retain parallel allocation buffers across scavenges; it is disabled because this currently conflicts with parallel card scanning under certain conditions."
Become unused as part ofJDK-8065972 "Remove support for ParNew+SerialOld and DefNew+CMS". Code enabled by this flag will be removed by JDK-8073466 "Remove buffer retaining functionality and clean up in ParGCAllocBuffer". Flag can be made obsolete.
4) PrintJVMWarnings - development boolean flag, description: "Print warnings for unimplemented JVM functions"
Become unused as part ofJDK-8057777 "Cleanup of old and unused VM interfaces". Can be removed, because it is a development flag.
Here a list of options with comments:
1) AdaptiveSizePausePolicy - product int flag, description: "Policy for changing generation size for pause goals"
Unused product GC flag. Can be made obsolete.
2) AdjustConcurrency - product boolean flag, description: "Call thr_setconcurrency at thread creation time to avoid LWP starvation on MP systems (for Solaris Only)"
Become unused as part of
3) ParallelGCRetainPLAB - diagnostic boolean flag, description: "Retain parallel allocation buffers across scavenges; it is disabled because this currently conflicts with parallel card scanning under certain conditions."
Become unused as part of
4) PrintJVMWarnings - development boolean flag, description: "Print warnings for unimplemented JVM functions"
Become unused as part of
- backported by
-
JDK-8083008 Unused VM Options in JDK9 HotSpot
-
- Resolved
-