8073861: Unused VM Options in JDK9 HotSpot

Reviewed-by: dholmes, lfoltan